hphp/test/slow/parser/hh-reserved-name-double-1.php.expectf
Fatal error: Cannot use 'Double' as class name as it is reserved in %s on line 3
